images and fonts moved to public, header moved to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,20 @@
     <meta property="og:description" content="Egy helyen a látványcsapatsportokba (foci, jégkorong, kézilabda, kosárlabda, vízilabda) öntött közpénzek több évnyi dokumentációja.">
     <meta name="description" content="Egy helyen a látványcsapatsportokba (foci, jégkorong, kézilabda, kosárlabda, vízilabda) öntött közpénzek több évnyi dokumentációja.">
     <title>Tao-kereső</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <a href="https://transparency.hu" target="_blank" rel="noopener noreferrer">
+          <img src="images/transparency.svg" alt="Transparency International" />
+        </a>
+        <h1>Tao-kereső</h1>
+        <a href="https://atlatszo.hu" target="_blank" rel="noopener noreferrer">
+          <img src="images/atlatszo.svg" alt="Átlátszó" />
+        </a>
+      </div>
+    </header>
     <noscript>Az oldal futtatásához engedélyezni kell a Javascript futtatását.</noscript>
     <div id="root"></div>
     <!--
@@ -66,7 +78,7 @@
         "message": "Az oldal sütiket (cookie) használ. Tudj meg többet az adatvédelmi irányelveinkről az ",
         "dismiss": "Elfogadom",
         "link": "alábbi linken.",
-        "href": "https://taokereso.atlatszo.hu/jogi-nyilatkozat"
+        "href": "https://taokereso.atlatszo.hu/jogi-nyilatkozat.html"
       }
     })});
     </script>
