unused files removed, legal page sources updated

--- a/public/jogi-nyilatkozat.html
+++ b/public/jogi-nyilatkozat.html
@@ -28,20 +28,20 @@
     <style>
       @font-face {
         font-family: 'LeagueSpartan-Bold';
-        src: url('https://taokereso.atlatszo.hu/static/media/LeagueSpartan-Bold.eot');
-        src: url('https://taokereso.atlatszo.hu/static/media/LeagueSpartan-Bold.woff2') format('woff2'),
-            url('https://taokereso.atlatszo.hu/static/media/LeagueSpartan-Bold.woff') format('woff'),
-            url('https://taokereso.atlatszo.hu/static/media/LeagueSpartan-Bold.ttf') format('truetype'),
-            url('https://taokereso.atlatszo.hu/static/media/LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype');
+        src: url('fonts/LeagueSpartan-Bold.eot');
+        src: url('fonts/LeagueSpartan-Bold.woff2') format('woff2'),
+            url('fonts/LeagueSpartan-Bold.woff') format('woff'),
+            url('fonts/LeagueSpartan-Bold.ttf') format('truetype'),
+            url('fonts/LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype');
       }
 
       @font-face {
         font-family: 'Verdana';
-        src: url('https://taokereso.atlatszo.hu/static/media/Verdana.eot');
-        src: url('https://taokereso.atlatszo.hu/static/media/Verdana.woff2') format('woff2'),
-            url('https://taokereso.atlatszo.hu/static/media/Verdana.woff') format('woff'),
-            url('https://taokereso.atlatszo.hu/static/media/Verdana.ttf') format('truetype'),
-            url('https://taokereso.atlatszo.hu/static/media/Verdana.eot?#iefix') format('embedded-opentype');
+        src: url('fonts/Verdana.eot');
+        src: url('fonts/Verdana.woff2') format('woff2'),
+            url('fonts/Verdana.woff') format('woff'),
+            url('fonts/Verdana.ttf') format('truetype'),
+            url('fonts/Verdana.eot?#iefix') format('embedded-opentype');
       }
 
       *,
@@ -121,11 +121,11 @@
     <header>
       <div class="container">
         <a href="https://transparency.hu" target="_blank" rel="noopener">
-          <img src="https://taokereso.atlatszo.hu/transparency.svg" alt="Transparency International" />
+          <img src="images/transparency.svg" alt="Transparency International" />
         </a>
         <h1>Tao-kereső</h1>
         <a href="https://atlatszo.hu" target="_blank" rel="noopener">
-          <img src="https://taokereso.atlatszo.hu/atlatszo.svg" alt="Átlátszó" />
+          <img src="images/atlatszo.svg" alt="Átlátszó" />
         </a>
       </div>
     </header>
